Fixed the hand for several games because of major changes to the basic hand control.

--- a/Games/FiveCrowns/Blazor/Views/FiveCrownsMainView.razor
+++ b/Games/FiveCrowns/Blazor/Views/FiveCrownsMainView.razor
@@ -5,7 +5,7 @@
 }
 <StackLayout>
     <StackItem>
-        <HandBlazor Hand="_vmData.PlayerHand1" />
+        <HandBlazor Hand="_vmData.PlayerHand1" TargetContainerSize="70vw" AdditionalSpacing="1" />
     </StackItem>
     <StackItem>
         <GameButtonComponent CommandObject="LayDownCommand"
