--- a/Games/Fluxx/Blazor/HandBlazor.razor
+++ b/Games/Fluxx/Blazor/HandBlazor.razor
@@ -1,5 +1,8 @@
+@inherits AbstractHandBlazor<D>
 @typeparam D
 <BaseHandBlazor D="D" Hand="Hand" AdditionalSpacing="AdditionalSpacing" Divider="Divider"
                 HandType="HandType" TargetContainerSize="@TargetContainerSize" TargetImageSize="@TargetImageSize" Context="DeckObject">
-    <CardGraphicsBlazor DeckObject="DeckObject" CommandParameter="DeckObject" CommandObject="Hand!.ObjectSingleClickCommand" />
+    <CardGraphicsBlazor DeckObject="DeckObject"
+        TargetHeight="@RealHeight()"
+        CommandParameter="DeckObject" CommandObject="Hand!.ObjectSingleClickCommand" />
 </BaseHandBlazor>
