--- a/Games/FourSuitRummy/Blazor/Views/FourSuitRummyMainView.razor
+++ b/Games/FourSuitRummy/Blazor/Views/FourSuitRummyMainView.razor
@@ -5,7 +5,7 @@
 }
 <CascadingValue Value="_gameContainer">
     <div style="height: 13vh">
-        <DeckOfCardsHandBlazor R="RegularRummyCard" Hand="_vmData.PlayerHand1" />
+        <DeckOfCardsHandBlazor AdditionalSpacing="1" R="RegularRummyCard" Hand="_vmData.PlayerHand1" />
     </div>
     <StackLayout>
         <StackItem>
