--- a/Games/GalaxyCardGame/Blazor/Views/GalaxyCardGameMainView.razor
+++ b/Games/GalaxyCardGame/Blazor/Views/GalaxyCardGameMainView.razor
@@ -29,7 +29,7 @@
 </StackLayout>
 <StackLayout>
     <StackItem>
-        <DeckOfCardsHandBlazor R="GalaxyCardGameCardInformation" Hand="_vmData.PlayerHand1" />
+        <DeckOfCardsHandBlazor AdditionalSpacing="1" R="GalaxyCardGameCardInformation" Hand="_vmData.PlayerHand1" />
     </StackItem>
     <StackItem>
         <LabelGridComponent DataContext="_vmData" Labels="_labels" />
