--- a/Games/GermanWhist/Blazor/Views/GermanWhistMainView.razor
+++ b/Games/GermanWhist/Blazor/Views/GermanWhistMainView.razor
@@ -10,7 +10,7 @@
     <DeckOfCardsTwoPlayerTrickBlazor T="GermanWhistCardInformation" DataContext="_vmData.TrickArea1" />
 </div>
 <div>
-    <DeckOfCardsHandBlazor R="GermanWhistCardInformation" Hand="_vmData.PlayerHand1" />
+    <DeckOfCardsHandBlazor AdditionalSpacing="1" R="GermanWhistCardInformation" Hand="_vmData.PlayerHand1" />
 </div>
 <div>
     <LabelGridComponent DataContext="_vmData" Labels="_labels" />
