--- a/Games/Hearts/Blazor/Views/HeartsMainView.razor
+++ b/Games/Hearts/Blazor/Views/HeartsMainView.razor
@@ -20,7 +20,7 @@
     }
 </StackLayout>
 <div>
-    <DeckOfCardsHandBlazor R="HeartsCardInformation" Hand="_vmData.PlayerHand1" />
+    <DeckOfCardsHandBlazor AdditionalSpacing="1" R="HeartsCardInformation" Hand="_vmData.PlayerHand1" />
 </div>
 @if (_gameContainer.SaveRoot.GameStatus == EnumStatus.Passing)
 {
