--- a/Games/HuseHearts/Blazor/Views/HuseHeartsMainView.razor
+++ b/Games/HuseHearts/Blazor/Views/HuseHeartsMainView.razor
@@ -26,7 +26,7 @@
         </ParentControl>
     </StackItem>
     <StackItem>
-        <DeckOfCardsHandBlazor R="HuseHeartsCardInformation" Hand="_vmData.Blind1" />
+        <DeckOfCardsHandBlazor AdditionalSpacing="1" R="HuseHeartsCardInformation" Hand="_vmData.Blind1" />
     </StackItem>
 </StackLayout>
 <div>
