--- a/Games/LifeCardGame/Blazor/Views/LifeCardGameMainView.razor
+++ b/Games/LifeCardGame/Blazor/Views/LifeCardGameMainView.razor
@@ -27,7 +27,7 @@
                 </ParentControl>
             </div>
             <div>
-                <HandBlazor Hand="_vmData.PlayerHand1" />
+                <HandBlazor AdditionalSpacing="1" Hand="_vmData.PlayerHand1" />
             </div>
             <div>
                 <LabelGridComponent DataContext="_vmData" Labels="_labels" />
