--- a/Games/Payday/Blazor/GamePage.razor
+++ b/Games/Payday/Blazor/GamePage.razor
@@ -14,7 +14,7 @@
     }
     return;
 }
-<CascadingValue Value="_targetImageHeight">
+<CascadingValue Value="TargetHeight">
     <ParentControl VM="PaydayMainViewModel">
         <PaydayMainView />
     </ParentControl>
