--- a/Games/Payday/Blazor/Views/BasicPickerView.razor
+++ b/Games/Payday/Blazor/Views/BasicPickerView.razor
@@ -5,7 +5,7 @@
 }
 <StackLayout>
     <StackItem>
-        <ListChooserBlazor ListPicker="VMData.PopUpList" />
+        <ListChooserBlazor TextHeight="6vh" ListPicker="VMData.PopUpList" />
     </StackItem>
     <StackItem>
         <GameButtonComponent 
