--- a/Games/PickelCardGame/Blazor/Views/PickelBidView.razor
+++ b/Games/PickelCardGame/Blazor/Views/PickelBidView.razor
@@ -6,5 +6,7 @@
     <BidControl />
 </div>
 <div>
-    <DeckOfCardsHandBlazor R="PickelCardGameCardInformation" Hand="DataContext.Model.PlayerHand1" />
+    <DeckOfCardsHandBlazor R="PickelCardGameCardInformation"
+        AdditionalSpacing="1"
+        Hand="DataContext.Model.PlayerHand1" />
 </div>
