--- a/Games/PickelCardGame/Blazor/Views/PickelCardGameMainView.razor
+++ b/Games/PickelCardGame/Blazor/Views/PickelCardGameMainView.razor
@@ -7,7 +7,9 @@
     <DeckOfCardsTwoPlayerTrickBlazor T="PickelCardGameCardInformation" DataContext="_vmData.TrickArea1" />
 </div>
 <div>
-    <DeckOfCardsHandBlazor R="PickelCardGameCardInformation" Hand="_vmData.PlayerHand1" />
+    <DeckOfCardsHandBlazor R="PickelCardGameCardInformation"
+        AdditionalSpacing="1"
+        Hand="_vmData.PlayerHand1" />
 </div>
 <div>
     <LabelGridComponent DataContext="_vmData" Labels="_labels" />
