--- a/Games/RoundsCardGame/Blazor/Views/RoundsCardGameMainView.razor
+++ b/Games/RoundsCardGame/Blazor/Views/RoundsCardGameMainView.razor
@@ -15,7 +15,9 @@
     <DeckOfCardsTwoPlayerTrickBlazor T="RoundsCardGameCardInformation" DataContext="_vmData.TrickArea1" />
 </div>
 <div>
-    <DeckOfCardsHandBlazor R="RoundsCardGameCardInformation" Hand="_vmData.PlayerHand1" />
+    <DeckOfCardsHandBlazor
+        AdditionalSpacing="1"
+        R="RoundsCardGameCardInformation" Hand="_vmData.PlayerHand1" />
 </div>
 <div>
     <LabelGridComponent DataContext="_vmData" Labels="_labels" />
