--- a/Games/SixtySix2Player/Blazor/Views/SixtySix2PlayerMainView.razor
+++ b/Games/SixtySix2Player/Blazor/Views/SixtySix2PlayerMainView.razor
@@ -15,7 +15,9 @@
             </StackItem>
         </StackLayout>
         <div>
-            <DeckOfCardsHandBlazor R="SixtySix2PlayerCardInformation" Hand="_vmData.PlayerHand1" />
+            <DeckOfCardsHandBlazor R="SixtySix2PlayerCardInformation" 
+                AdditionalSpacing="1"
+                Hand="_vmData.PlayerHand1" />
         </div>
         <div>
             <LabelGridComponent DataContext="_vmData" Labels="_labels" />
