--- a/Games/Spades2Player/Blazor/Views/Spades2PlayerMainView.razor
+++ b/Games/Spades2Player/Blazor/Views/Spades2PlayerMainView.razor
@@ -13,7 +13,9 @@
     <SpadesBiddingView />
 </ParentControl>
 <div>
-    <DeckOfCardsHandBlazor R="Spades2PlayerCardInformation" Hand="_vmData.PlayerHand1" />
+    <DeckOfCardsHandBlazor R="Spades2PlayerCardInformation"
+        AdditionalSpacing="1"
+        Hand="_vmData.PlayerHand1" />
 </div>
 <div>
     <LabelGridComponent DataContext="_vmData" Labels="_labels" />
