--- a/Games/Spades4Player/Blazor/Views/Spades4PlayerMainView.razor
+++ b/Games/Spades4Player/Blazor/Views/Spades4PlayerMainView.razor
@@ -28,5 +28,7 @@
     </StackItem>
 </StackLayout>
 <div>
-    <DeckOfCardsHandBlazor R="Spades4PlayerCardInformation" Hand="_vmData.PlayerHand1" />
+    <DeckOfCardsHandBlazor R="Spades4PlayerCardInformation" 
+        AdditionalSpacing="1"
+        Hand="_vmData.PlayerHand1" />
 </div>
