--- a/Games/YahtzeeHandsDown/Blazor/Views/YahtzeeHandsDownMainView.razor
+++ b/Games/YahtzeeHandsDown/Blazor/Views/YahtzeeHandsDownMainView.razor
@@ -41,6 +41,6 @@
         </div>
     </GridItem>
     <GridItem Column="2">
-        <ComboListBlazor Hand="@_vmData.ComboHandList" />
+        <ComboListBlazor Hand="@_vmData.ComboHandList" HandType="EnumHandList.Vertical" />
     </GridItem>
 </GridContainer>
