--- a/Games/GoFish/Blazor/Views/GoFishMainView.razor
+++ b/Games/GoFish/Blazor/Views/GoFishMainView.razor
@@ -26,7 +26,7 @@
         </StackItem>
     </StackLayout>
     <div>
-        <DeckOfCardsHandBlazor R="RegularSimpleCard" Hand="_vmData.PlayerHand1" />
+        <DeckOfCardsHandBlazor AdditionalSpacing="1" R="RegularSimpleCard" Hand="_vmData.PlayerHand1" />
     </div>
     <ParentControl VM="AskViewModel">
         <AskView />
