--- a/Games/Pinochle2Player/Blazor/Views/Pinochle2PlayerMainView.razor
+++ b/Games/Pinochle2Player/Blazor/Views/Pinochle2PlayerMainView.razor
@@ -15,7 +15,9 @@
             </StackItem>
         </StackLayout>
         <div>
-            <DeckOfCardsHandBlazor R="Pinochle2PlayerCardInformation" Hand="_vmData.PlayerHand1" />
+            <DeckOfCardsHandBlazor R="Pinochle2PlayerCardInformation"
+                AdditionalSpacing="1"
+                Hand="_vmData.PlayerHand1" />
         </div>
         <StackLayout>
             <StackItem>
