--- a/Games/Rook/Blazor/Views/RookMainView.razor
+++ b/Games/Rook/Blazor/Views/RookMainView.razor
@@ -35,5 +35,5 @@
     <HandBlazor TargetContainerSize="95vw" Hand="_vmData.PlayerHand1" />
 </div>
 <div>
-    <HandBlazor Hand="_vmData.Dummy1" />
+    <HandBlazor Hand="_vmData.Dummy1" TargetContainerSize="95vw" />
 </div>
