--- a/Games/Uno/Blazor/HandBlazor.razor
+++ b/Games/Uno/Blazor/HandBlazor.razor
@@ -1,4 +1,7 @@
+@inherits AbstractHandBlazor<UnoCardInformation>
 <BaseHandBlazor D="UnoCardInformation" Hand="Hand" AdditionalSpacing="AdditionalSpacing" Divider="Divider"
                 HandType="HandType" TargetContainerSize="@TargetContainerSize" TargetImageSize="@TargetImageSize" Context="DeckObject">
-    <CardGraphicsBlazor DeckObject="DeckObject" @key="GetKey" CommandParameter="DeckObject" CommandObject="Hand!.ObjectSingleClickCommand" />
+    <CardGraphicsBlazor DeckObject="DeckObject" 
+        TargetHeight="@RealHeight()"
+        @key="GetKey" CommandParameter="DeckObject" CommandObject="Hand!.ObjectSingleClickCommand" />
 </BaseHandBlazor>
