--- a/Games/Xactika/Blazor/HandBlazor.razor
+++ b/Games/Xactika/Blazor/HandBlazor.razor
@@ -1,4 +1,7 @@
+@inherits AbstractHandBlazor<XactikaCardInformation>
 <BaseHandBlazor D="XactikaCardInformation" Hand="Hand" AdditionalSpacing="AdditionalSpacing" Divider="Divider"
                 HandType="HandType" TargetContainerSize="@TargetContainerSize" TargetImageSize="@TargetImageSize" Context="DeckObject">
-    <CardGraphicsBlazor DeckObject="DeckObject" @key="GetKey" CommandParameter="DeckObject" CommandObject="Hand!.ObjectSingleClickCommand" />
+    <CardGraphicsBlazor DeckObject="DeckObject"
+        TargetHeight="@RealHeight()"
+        @key="GetKey" CommandParameter="DeckObject" CommandObject="Hand!.ObjectSingleClickCommand" />
 </BaseHandBlazor>
