--- a/Games/Opetong/Blazor/Views/OpetongMainView.razor
+++ b/Games/Opetong/Blazor/Views/OpetongMainView.razor
@@ -30,7 +30,7 @@
     </StackItem>
 </StackLayout>
 <div>
-    <DeckOfCardsHandBlazor R="RegularRummyCard" Hand="_vmData.PlayerHand1" />
+    <DeckOfCardsHandBlazor R="RegularRummyCard" AdditionalSpacing="1" Hand="_vmData.PlayerHand1" />
 </div>
 <div>
     <DeckOfCardsMainRummySetsBlazor 
