--- a/Games/SkuckCardGame/Blazor/Views/SkuckCardGameMainView.razor
+++ b/Games/SkuckCardGame/Blazor/Views/SkuckCardGameMainView.razor
@@ -18,7 +18,7 @@
             <DeckOfCardsTwoPlayerTrickBlazor T="SkuckCardGameCardInformation" DataContext="_vmData.TrickArea1" />
         </div>
         <div>
-            <DeckOfCardsHandBlazor R="SkuckCardGameCardInformation" Hand="_vmData.PlayerHand1" />
+            <DeckOfCardsHandBlazor R="SkuckCardGameCardInformation" TargetContainerSize="68vw" AdditionalSpacing="1" Hand="_vmData.PlayerHand1" />
         </div>
         <StackLayout>
             <StackItem>
