--- a/Standard/BasicGameFrameworkLibrary/Blazor/BasicControls/RegularSpecialBoards/RegularCardsPlayerBoardBlazor.razor
+++ b/Standard/BasicGameFrameworkLibrary/Blazor/BasicControls/RegularSpecialBoards/RegularCardsPlayerBoardBlazor.razor
@@ -15,6 +15,7 @@
                 <DeckOfCardsImageBlazor CommandParameter="card"
                                         DeckObject="card"
                                         R="T"
+                                        PartOfBoard=true
                                         CommandObject="DataContext.CardCommand" />
             </FlexibleDeckRenderComponent>
         </svg>
