Fixed issues with the rummy games.

--- a/Games/FiveCrowns/Blazor/MainRummySetsBlazor.razor
+++ b/Games/FiveCrowns/Blazor/MainRummySetsBlazor.razor
@@ -17,6 +17,7 @@
                                   Context="Item"
                                   DataContext="Details">
         <CardGraphicsBlazor CommandObject="Details.ObjectSingleClickCommand"
+                            PartOfBoard=true
                             CommandParameter="Item"
                             DeckObject="Item" />
     </BaseIndividualRummySetBlazor>
