--- a/Standard/BasicGameFrameworkLibrary/Blazor/BasicControls/SpecializedFrames/MainRummySets/DeckOfCardsMainRummySetsBlazor.razor
+++ b/Standard/BasicGameFrameworkLibrary/Blazor/BasicControls/SpecializedFrames/MainRummySets/DeckOfCardsMainRummySetsBlazor.razor
@@ -21,6 +21,7 @@
                                   Context="Item"
                                   DataContext="Details">
         <DeckOfCardsImageBlazor R="RU"
+                                PartOfBoard=true
                                 CommandObject="Details.ObjectSingleClickCommand"
                                 CommandParameter="Item"
                                 DeckObject="Item" />
