Update BaseHandBlazor properties in views
Modified MailListView.razor and MailListView.razor.cs to add
TargetContainerSize and TargetImageSize to the BaseHandBlazor
component. Removed TargetHeight property from MailListView.razor.cs.
Updated PaydayMainView.razor to include the same changes for the
deal card, passing TargetHeight to the PaydayCardBlazor component.

--- a/Games/Payday/Blazor/Views/PaydayMainView.razor
+++ b/Games/Payday/Blazor/Views/PaydayMainView.razor
@@ -42,7 +42,7 @@
                 <GridItem Row="2">
                     <StackLayout>
                         <StackItem>
-                            <BaseHandBlazor D="DealCard" HandType="EnumHandList.Vertical" UseKey="false" Hand="DataContext.VMData.CurrentDealList" Context="DeckObject">
+                            <BaseHandBlazor TargetContainerSize="40vh" D="DealCard" TargetImageSize="19vh" HandType="EnumHandList.Vertical" UseKey="false" Hand="DataContext.VMData.CurrentDealList" Context="DeckObject">
                                 <PaydayCardBlazor CommandParameter="DeckObject"
                                                   DeckObject="DeckObject"
                                                   TargetHeight="@RealHeight"
