--- a/Games/Payday/Blazor/Views/MailListView.razor
+++ b/Games/Payday/Blazor/Views/MailListView.razor
@@ -2,7 +2,7 @@
 {
     return;
 }
-<BaseHandBlazor D="MailCard" HandType="EnumHandList.Vertical" UseKey="false" Hand="VMData.CurrentMailList" Context="DeckObject">
+<BaseHandBlazor D="MailCard" TargetContainerSize="40vh" TargetImageSize="19vh" HandType="EnumHandList.Vertical" UseKey="false" Hand="VMData.CurrentMailList" Context="DeckObject">
     <PaydayCardBlazor CommandParameter="DeckObject"
                       DeckObject="DeckObject" 
                       CommandObject="VMData.CurrentMailList.ObjectSingleClickCommand" />
