Refactor layout and update package versions
- Added `<GameCssStartup>` component in `App.razor` to wrap the `<Router>` and changed layouts to `BlankLayout`.
- Replaced `<MainPage>` with `<GamePackageFullScreen>` in `BasicLoaderPage.razor`, updating the structure and messaging for native app support.
- Updated package references in `GameLoaderBlazorLibrary.csproj` to newer versions of `BasicBlazorLibrary` and `BasicGameFrameworkLibrary`.
- Added new using directives in `_Imports.razor` for layout components.
- Introduced `App.razor.cs` with a new namespace and a parameter property `AppStyleName` for style customization.

--- a/Standard/GameLoaderBlazorLibrary/BasicLoaderPage.razor
+++ b/Standard/GameLoaderBlazorLibrary/BasicLoaderPage.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
-<MainPage>
+<GamePackageFullScreen>
     @if (CanStartLoading() == false)
     {
         <div>
@@ -61,4 +61,4 @@
         return;
     }
     @DataContext.GameRendered
-</MainPage>
+</GamePackageFullScreen>
