--- a/Standard/GameLoaderBlazorLibrary/_Imports.razor
+++ b/Standard/GameLoaderBlazorLibrary/_Imports.razor
@@ -5,3 +5,4 @@
 @using BasicBlazorLibrary.Components.CssGrids;
 @using BasicGameFrameworkLibrary.Blazor.BasicControls.SimpleControls
 @using BasicBlazorLibrary.Components.Layouts
+@using BasicBlazorLibrary.Layouts
