Refactor CSS management and update package version
- Updated `GameCssStartup.razor` to use `CssSimpleSetup` for CSS file management and removed previous implementation.
- Modified `GameCssStartup.razor.cs` to change the namespace, remove unnecessary parameters, and define `_files` for CSS files.
- Enhanced `App.razor` with additional using directives and added a check for `AppStyleName`.
- Updated `App.razor.cs` to include a static `AppStyleName` property and retain the toast timeout setting.
- Changed `BasicGameFrameworkLibrary` package version from `9.0.23` to `9.0.25` in the project file.

--- a/Standard/BasicGameFrameworkLibrary/Blazor/StartupClasses/App.razor
+++ b/Standard/BasicGameFrameworkLibrary/Blazor/StartupClasses/App.razor
@@ -1,4 +1,14 @@
-﻿<GameCssStartup AppStyleName="@AppStyleName">
+﻿@using BasicBlazorLibrary.Components.CssManagement
+@using BasicBlazorLibrary.Layouts
+@using Microsoft.AspNetCore.Components.Routing
+@if (string.IsNullOrWhiteSpace(AppStyleName))
+{
+    <div>
+        No app style name
+    </div>
+    return;
+}
+<CssSimpleSetup AppStyleName="@AppStyleName" CssFiles="@_files">
     <Router AppAssembly="@typeof(App).Assembly">
         <Found Context="routeData">
             <RouteView RouteData="@routeData" DefaultLayout="@typeof(BlankLayout)" />
@@ -9,4 +19,4 @@
             </LayoutView>
         </NotFound>
     </Router>
-</GameCssStartup>
+</CssSimpleSetup>
