--- a/Standard/BasicGameFrameworkLibrary/Blazor/StartupClasses/App.razor
+++ b/Standard/BasicGameFrameworkLibrary/Blazor/StartupClasses/App.razor
@@ -9,7 +9,7 @@
     return;
 }
 <CssSimpleSetup AppStyleName="@AppStyleName" CssFiles="@_files">
-    <Router AppAssembly="@typeof(App).Assembly">
+    <Router AppAssembly="@typeof(App).Assembly" AdditionalAssemblies="_additionalAssemblies">
         <Found Context="routeData">
             <RouteView RouteData="@routeData" DefaultLayout="@typeof(BlankLayout)" />
         </Found>
