--- a/Standard/BasicGameFrameworkLibrary/Blazor/BasicControls/SimpleControls/ScoreBoardBlazor.razor
+++ b/Standard/BasicGameFrameworkLibrary/Blazor/BasicControls/SimpleControls/ScoreBoardBlazor.razor
@@ -15,17 +15,17 @@
                     }
                     else
                     {
-                        <th style="vertical-align: bottom; padding-right: 10px;">
+                       <th style="vertical-align: bottom; padding-right: 10px;">
                             <div style="margin-top: 8px">
                                 @foreach (var item in c.Header)
                                 {
                                     @if (string.IsNullOrWhiteSpace(item.ToString()) == false)
                                     {
-                                        <div class="vertical" style="margin-top: -4px; padding-right: 5px;">@item</div>
+                                        <div class="vertical">@item</div>
                                     }
                                     else
                                     {
-                                        <div class="vertical" style="margin-top: -4px; padding-right: 5px;">&nbsp;</div>
+                                        <div class="vertical">&nbsp;</div>
                                     }
                                 }
                             </div>
