--- a/Standard/GameLoaderBlazorLibrary/BasicLoaderPage.razor
+++ b/Standard/GameLoaderBlazorLibrary/BasicLoaderPage.razor
@@ -53,7 +53,7 @@
                 @if (CanShowGameList())
                 {
                     <WrapLayout ColumnWidth="22vw" Margins="3px" RenderList="DataContext.GameList" Context="game">
-                        <GameButtonComponent Width="22vw" CustomCallBack="() => DataContext.ChoseGame(game)" Display="@game" />
+                        <GameButtonComponent Width="95%" CustomCallBack="() => DataContext.ChoseGame(game)" Display="@game" />
                     </WrapLayout>
                 }
             </MainContent>
