Removing loading screen.

--- a/Standard/GameLoaderBlazorLibrary/BasicLoaderPage.razor
+++ b/Standard/GameLoaderBlazorLibrary/BasicLoaderPage.razor
@@ -9,7 +9,7 @@
     }
     @if (_loadedOnce == false)
     {
-        <div>Loading Game Package Loader........</div>
+        //attempt to do nothing.  since this now shows up for a second (freaky)
         return;
     }
     @if (DataContext!.GameList.Count == 0)
